@@ -9,11 +9,13 @@ function sitestats_update($data)
     set_time_limit(1200);
     ignore_user_abort(true);
 
-    $XBT_Seeder  = mysqli_fetch_assoc(sql_query('SELECT sum(seeders) AS seeders FROM torrents'))     or sqlerr(__FILE__, __LINE__);
-    $XBT_Leecher = mysqli_fetch_assoc(sql_query('SELECT sum(leechers) AS leechers FROM torrents'))   or sqlerr(__FILE__, __LINE__);
+    $query  = sql_query('SELECT IFNULL(sum(seeders), 0) AS seeders FROM torrents') or sqlerr(__FILE__, __LINE__);
+    $Seeder  = mysqli_fetch_assoc($query);
+    $query = sql_query('SELECT IFNULL(sum(leechers), 0) AS leechers FROM torrents') or sqlerr(__FILE__, __LINE__);
+    $Leecher = mysqli_fetch_assoc($query);
 
     $registered     = get_row_count('users');
-    $unverified     = get_row_count('users', "WHERE status='pending'");
+    $unverified     = get_row_count('users', "WHERE status = 'pending'");
     $torrents       = get_row_count('torrents');
     $torrentstoday  = get_row_count('torrents', "WHERE added between UNIX_TIMESTAMP(DATE_FORMAT(NOW() ,'%Y-%m-%d')) AND UNIX_TIMESTAMP(NOW())");
     $donors         = get_row_count('users', "WHERE donor ='yes'");
@@ -32,9 +34,13 @@ function sitestats_update($data)
     $moderators     = get_row_count('users', "WHERE class = '" . UC_MODERATOR . "'");
     $administrators = get_row_count('users', "WHERE class = '" . UC_ADMINISTRATOR . "'");
     $sysops         = get_row_count('users', "WHERE class = '" . UC_SYSOP . "'");
-    $seeders        = (int) $XBT_Seeder['seeders'];
-    $leechers       = (int) $XBT_Leecher['leechers'];
-    sql_query("UPDATE stats SET regusers = '$registered', unconusers = '$unverified', torrents = '$torrents', seeders = '$seeders', leechers = '$leechers', unconnectables = '$unconnectables', torrentstoday = '$torrentstoday', donors = '$donors', forumposts = '$forumposts', forumtopics = '$forumtopics', numactive = '$numactive', torrentsmonth = '$torrentsmonth', gender_na = '$gender_na', gender_male = '$gender_male', gender_female = '$gender_female', powerusers = '$powerusers', disabled = '$disabled', uploaders = '$uploaders', moderators = '$moderators', administrators = '$administrators', sysops = '$sysops' WHERE id = 1 LIMIT 1");
+    $seeders        = (int) $Seeder['seeders'];
+    $leechers       = (int) $Leecher['leechers'];
+    $sql = "UPDATE stats SET regusers = $registered, unconusers = $unverified, torrents = $torrents, seeders = $seeders, leechers = $leechers, unconnectables = $unconnectables,
+            torrentstoday = $torrentstoday, donors = $donors, forumposts = $forumposts, forumtopics = $forumtopics, numactive = $numactive, torrentsmonth = $torrentsmonth, gender_na = $gender_na,
+            gender_male = $gender_male, gender_female = $gender_female, powerusers = $powerusers, disabled = $disabled, uploaders = $uploaders, moderators = $moderators,
+            administrators = $administrators, sysops = $sysops WHERE id = 1";
+    sql_query($sql) or sqlerr(__FILE__, __LINE__);
     if ($data['clean_log'] && $queries > 0) {
         write_log("Stats Cleanup: Completed using $queries queries");
     }
