@@ -75,6 +75,7 @@ function db_insert()
         'schema'     => "source {$public}install/extra/schema.php.sql",
         'data'       => "source {$public}install/extra/data.php.sql",
         'timestamps' => "UPDATE cleanup SET clean_time = $timestamp",
+        'stats'      => "INSERT INTO stats (regusers) VALUES (1)"
     ];
     $fail = '';
     foreach ($sources as $name => $source) {
